# project-name-generator

./: Cargo.toml  README.md
.github/workflows/: cd.yaml
src/: main.rs  translation.rs
