[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>", "CookieCoder15 <40507205+CookieCoder15@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "project-name-generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = {version = "0.11.1", features = ["blocking"]}
serde_json = "1.0"
thesaurus = "0.1.0"
