[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>", "lhvy <cookiecoder15@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "project-name-generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_ascii = "0.1.7"
anyhow = "1.0"
reqwest = {version = "0.11.1", features = ["blocking"]}
serde_json = "1.0"
thesaurus = "0.1.0"
